[gd_scene load_steps=4 format=3 uid="uid://c0jlxjxdu4vma"]

[ext_resource type="Script" path="res://Scenes/UI/UI.gd" id="1_mphwc"]
[ext_resource type="Texture2D" uid="uid://c81cyxo81c3w6" path="res://Scenes/UI/Sprites/Bar-1.png.png" id="2_ky7pi"]
[ext_resource type="Texture2D" uid="uid://c416wpu8cpp4g" path="res://Scenes/UI/Sprites/Pause_Button-1.png.png" id="3_vwkcr"]

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_mphwc")

[node name="Score_Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.5
offset_top = 20.0
offset_right = 51.5
offset_bottom = 65.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Score: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="High_Score" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -362.5
offset_right = 362.5
offset_bottom = 178.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 128
text = "High Score: "

[node name="Restart" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.5
offset_top = 227.5
offset_right = 334.5
offset_bottom = 372.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Restart Game"

[node name="Health_Bar_BG" type="TextureProgressBar" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -90.0
offset_right = -30.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0
fill_mode = 6
nine_patch_stretch = true
texture_progress = ExtResource("2_ky7pi")
tint_progress = Color(0.356863, 0, 0.0235294, 0.439216)

[node name="Health_Bar" type="TextureProgressBar" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -90.0
offset_right = -30.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0
fill_mode = 6
nine_patch_stretch = true
texture_progress = ExtResource("2_ky7pi")
tint_progress = Color(0.866667, 0, 0.0745098, 0.717647)

[node name="Exp_Bar" type="TextureProgressBar" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 30.0
offset_right = -30.0
offset_bottom = 28.0
grow_horizontal = 2
fill_mode = 6
nine_patch_stretch = true
texture_progress = ExtResource("2_ky7pi")
tint_progress = Color(1, 1, 1, 0.815686)

[node name="Exp_Bar_BG" type="TextureProgressBar" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 30.0
offset_right = -30.0
offset_bottom = 28.0
grow_horizontal = 2
value = 100.0
fill_mode = 6
nine_patch_stretch = true
texture_progress = ExtResource("2_ky7pi")
tint_progress = Color(1, 1, 1, 0.168627)

[node name="Upgrade_Menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Upgrade_Dim_Overlay" type="ColorRect" parent="Upgrade_Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.427451)

[node name="Health_Upgrade" type="Button" parent="Upgrade_Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -770.0
offset_top = -370.0
offset_right = -370.0
offset_bottom = 330.0
grow_horizontal = 2
grow_vertical = 2

[node name="Damage_Upgrade" type="Button" parent="Upgrade_Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -370.0
offset_right = 200.0
offset_bottom = 330.0
grow_horizontal = 2
grow_vertical = 2

[node name="Utility_Upgrade" type="Button" parent="Upgrade_Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 370.0
offset_top = -370.0
offset_right = 770.0
offset_bottom = 330.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenu" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Pause_Dim_Overlay" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.427451)

[node name="ResumeButton" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.5
offset_top = -140.0
offset_right = 104.5
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(104, 40)
theme_override_font_sizes/font_size = 52
text = "Resume"

[node name="ExitButton" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = 60.0
offset_right = 50.5
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 40)
theme_override_font_sizes/font_size = 52
text = "Exit"

[node name="Restart" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -40.0
offset_right = 175.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 52
text = "Restart Game"

[node name="PauseButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -75.0
offset_bottom = 75.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
icon = ExtResource("3_vwkcr")
expand_icon = true

[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Upgrade_Menu/Health_Upgrade" to="." method="_on_health_upgrade_pressed"]
[connection signal="pressed" from="Upgrade_Menu/Damage_Upgrade" to="." method="_on_damage_upgrade_pressed"]
[connection signal="pressed" from="Upgrade_Menu/Utility_Upgrade" to="." method="_on_utility_upgrade_pressed"]
[connection signal="pressed" from="PauseMenu/Restart" to="." method="_on_restart_pressed"]
